<?xml version="1.0" encoding="utf-8"?>
<resources>    
	<string name="app_name_idcard">ID Card Scan and Copy</string>
    <string name="splash_title">ID Card Scan &amp; Copy</string>
    <string name="bt_scan">Start</string>
    <string name="button_continue">Continue</string>
    <string name="button_complete">Exit</string>
    <string name="button_print">Print</string>
    <string name="connect_dialog_test">Testing connection...</string>
    <string name="connect_dialog_success">Successfully connected to the server.</string>
    <string name="connect_dialog_failed">Failed to connect to the server.</string>
    <string name="PRINT_COVER_OPEN">The machine\'s cover is open.</string>
    <string name="PRINT_MARKER_WASTE_ALMOST_FULL">Waste toner bottle will be full soon.</string>
    <string name="PRINT_DEVELOPER_EMPTY">There is no print developer.</string>
    <string name="PRINT_DEVELOPER_LOW">The print developer is almost depleted. </string>
    <string name="PRINT_INPUT_TRAY_MISSING">Paper tray is not set.</string>
    <string name="PRINT_MARKER_WASTE_FULL">Waste toner bottle is full.</string>
    <string name="PRINT_MEDIA_EMPTY">Paper tray is empty.</string>
    <string name="PRINT_MEDIA_JAM">A paper misfeed has occurred.</string>
    <string name="PRINT_OTHER">Other errors were detected.</string>
    <string name="PRINT_OUTPUT_AREA_FULL">The output tray is full.</string>
    <string name="PRINT_OUTPUT_TRAY_MISSING">There is no output tray.</string>
    <string name="PRINT_PAUSED">Printing has been paused.</string>
    <string name="PRINT_TONER_EMPTY">Toner cartridge is empty.  </string>
    <string name="PRINT_TONER_LOW">Toner cartridge is almost empty.</string>
    <string name="PRINT_COMMUNICATION_LOG_FULL">The scanner journal is full, the scanned data needs to be printed out.</string>
    <string name="job_aborted">Scanning has been stopped.</string>
    <string name="dlg_printing_message_printing_stopped">Printing has been suspended.</string>
    <string name="txid_scan_d_count">%d pages</string>
    <string name="sender_complete">Sending has completed.</string>
    <string name="print_complete">Printing has completed.</string>
    <string name="sender_fail">Failed to send.</string>
    <string name="sender_auth_fail">Failed to authenticate.</string>
    <string name="print_fail">Failed to print.</string>
    <string name="combine_file_fail">Failed to combine the files.</string>
    <string name="input_empty">Please fill in the blanks.</string>
    <string name="folder_kind_smb">SMB</string>
    <string name="folder_kind_ftp">FTP</string>
    <string name="encoding_usascii">US-ASCII</string>
    <string name="encoding_shiftjis">Shift_JIS</string>
    <string name="encoding_eucjp">EUC-JP</string>
    <string name="ftp_item_server">Server</string>
    <string name="server_path">Path</string>
    <string name="server_username">User Name</string>
    <string name="server_password">Password</string>
    <string name="ftp_item_encoding">Encoding</string>
    <string name="ftp_item_port">Port</string>
    <string name="txid_scan_b_dest_select_mail">Destination</string>
    <string name="sender_invaild_email">Invalid email address.</string>
    <string name="tx_init_setting">Settings</string>
    <string name="fragment_sender_item">Destination</string>
    <string name="fragment_sender_item_value_null">No Setting</string>
    <string name="fragment_sender_list_outside">Select items not from list.</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_init_setting_section_scan_ok">OK</string>
    <string name="btn_init_setting_section_scan_color_mode">Type of Original</string>
    <string name="btn_init_setting_section_scan_file_type">File Type</string>
    <string name="txid_scan_b_top_mono_text_photo">Black &amp; White</string>
    <string name="txid_scan_b_top_full_color_text_photo">Full Color</string>
    <string name="txid_scan_b_top_auto_color_select">Auto Color</string>
    <string name="txid_scan_b_top_file_jpg">JPEG</string>
    <string name="txid_scan_b_top_file_tiff">TIFF</string>
    <string name="txid_scan_b_top_file_pdf">PDF</string>
    <string name="btn_init_setting_section_print_color">Color</string>
    <string name="btn_init_setting_section_print_count">Quantity</string>
    <string name="tx_init_setting_section_print_file_name">File Name</string>
    <string name="tx_init_setting_section_print_file_name_stratum01">Level 1</string>
    <string name="tx_init_setting_section_print_file_name_stratum02">Level 2</string>
    <string name="tx_init_setting_section_print_file_name_stratum03">Level 3</string>
    <string name="tx_init_setting_section_print_file_name_stratum04">Level 4</string>
    <string name="tx_init_setting_section_print_file_name_stratum05">Level 5</string>
    <string name="tx_init_setting_section_print_file_name_stratum06">Level 6</string>
    <string name="tx_init_setting_section_print_file_name_rule01">No Setting Rules</string>
    <string name="tx_init_setting_section_print_file_name_rule02">User Name</string>
    <string name="tx_init_setting_section_print_file_name_rule03">Date &amp; Time</string>
    <string name="tx_init_setting_section_print_file_name_rule_time01">YYYYMMDDHHMMSS</string>
    <string name="tx_init_setting_section_print_file_name_rule_time02">DDMMYYYYHHMMSS</string>
    <string name="tx_init_setting_section_print_file_name_rule_time03">MMDDYYYYHHMMSS</string>
    <string name="tx_init_setting_section_print_file_name_rule04">Custom Text</string>
    <string name="tx_init_setting_section_print_file_name_rule_time">Set Date &amp; Time Display</string>
    <string name="tx_init_setting_addressee">Destination Settings</string>
    <string name="tx_init_setting_scan">Scan Setting</string>
    <string name="tx_init_setting_print">Print Setting</string>
    <string name="tx_init_setting_rule_file_name">Rule of File Name Setting</string>
    <string name="tx_init_setting_messenger">Sender Setting</string>
    <string name="tx_init_setting_file_name">Subject</string>
    <string name="tx_init_setting_domain">Domain Name</string>
    <string name="smtp_set_server">Mail Server</string>
    <string name="smtp_server_port">Port No.</string>
    <string name="smtp_send_cer">Emailing Authentication</string>
    <string name="smtp_ssl">SSL for encrypted communication</string>
    <string name="smtp_user_code">User ID</string>
    <string name="smtp_password">Password</string>
    <string name="smtp_send_test">Sending Test</string>
    <string name="smtp_true">On</string>
    <string name="smtp_false">Off</string>
    <string name="smtp_title">SMTP Settings</string>
    <string name="splash_description">Scan both sides of the ID card to make a file, printing is available. </string>
    <string name="mail_send_fail">Emailing has failed.</string>
    <string name="smtp_not_set">Please set SMTP server first.</string>
    <string name="recevier_not_select">Please set destination(s).</string>
    <string name="sender_not_select">Please set sender(s).</string>
    <string name="sender_dlg_message_print">To print press [Print],\nto scan another ID card press [Continue],\nto finish press [Exit]. </string>
    <string name="sender_dlg_message_no_print">Be sure to take your ID card copy.\nTo continue, press [Continue],\nto finish, press [Exit]. </string>
    <string name="sender_email">Email Address</string>
    <string name="input_folder_title">Folder Destination(s)</string>
    <string name="fragment_scan_front">Front Side Scan</string>
    <string name="fragment_scan_back">Back Side Scan</string>
    <string name="fragment_preview">Preview</string>
    <string name="fragment_sender">Select Destination</string>
    <string name="tv_scan_step1">Front Side</string>
    <string name="tv_scan_step2">Back Side</string>
    <string name="txid_scan_b_dest_select_folder">To Folder (Address Book)</string>
    <string name="txid_scan_b_dest_select_folder_add">To Folder (Manual)</string>
    <string name="txid_scan_b_dest_select_mail_add">To Email Address(Manual)</string>
    <string name="fragment_sender_select">Select Destination</string>
    <string name="fragment_sender_change">Edit</string>
    <string name="btn_init_setting_section_scan_reset">Reset</string>
    <string name="hint_init_setting_input">Touch to enter</string>
    <string name="scan_front_txt_description">To scan, set front side of ID card</string>
    <string name="scan_back_txt_description">To scan, set back side of ID card.</string>
    <string name="txt_float_dest_total">Destination</string>
    <string name="splash_app_start">Starting up…</string>
    <string name="txid_job_property_print">Send then print</string>
    <string name="tx_init_setting_section_print_file_name_stratum">Name Settings</string>
    <string name="tx_init_setting_section_print_file_name_Separator">Separator</string>
    <string name="txid_cmn_d_cannot_connect">Failed to initialize.</string>
    <string name="txid_scan_b_dest_addr_tag_freq">Freq.</string>
</resources>
