<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="1024dp"
    android:layout_height="520dp"
     >

    <ImageView
        android:layout_width="1024dp"
        android:layout_height="520dp"
        android:src="@drawable/id_top_bg" 
        android:scaleType="center">   
    </ImageView>
  
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="826dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/splash_title"
        android:textColor="@color/black"
        android:textSize="36px" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="824dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="89dp"
        android:gravity="center"
        android:text="@string/splash_description"
        android:textColor="@color/black"
        android:textSize="24px" />

    <ProgressBar
        android:id="@+id/pb_start"
        style="@style/ProgressBar_Large"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="462dp"
        android:layout_marginTop="380dp"
        android:visibility="visible" />
    
     <TextView
        android:id="@+id/tv_start_msg"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="262dp"
        android:layout_marginTop="480dp"
        android:gravity="center"
        android:text="@string/splash_app_start"
        android:textColor="@color/text_color_555555"
        android:textSize="20px" />
    

</FrameLayout>