<?xml version="1.0" encoding="utf-8"?>
<!-- title -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/up"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="#B4B4B4" >

    <ImageView
        android:id="@+id/tle_img_step1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="206dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/icon_wizardstep_01_w" />

    <TextView
        android:id="@+id/tle_txt_step1"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="16dp"
        android:singleLine="true"
        android:gravity="center"
        android:text="@string/fragment_sender"
        android:textColor="#000000"
        android:textSize="21px"
        android:visibility="visible" />

    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="21dp"
        android:src="@drawable/icon_wizardstep_arrow_01" />

    <ImageView
        android:id="@+id/tle_img_step2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/icon_wizardstep_02_n" />

    <TextView
        android:id="@+id/tle_txt_step2"
        android:layout_width="344dp"
        android:layout_height="28dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="16dp"
        android:singleLine="true"
        android:gravity="center"
        android:text="@string/fragment_scan_front"
        android:textColor="#000000"
        android:textSize="21px"
        android:visibility="gone" />

    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="21dp"
        android:src="@drawable/icon_wizardstep_arrow_01" />

    <ImageView
        android:id="@+id/tle_img_step3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/icon_wizardstep_03_n" />

    <TextView
        android:id="@+id/tle_txt_step3"
        android:layout_width="344dp"
        android:layout_height="28dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="16dp"
        android:singleLine="true"
        android:gravity="center"
        android:text="@string/fragment_scan_back"
        android:textColor="#000000"
        android:textSize="21px"
        android:visibility="gone" />

    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="21dp"
        android:src="@drawable/icon_wizardstep_arrow_01" />

    <ImageView
        android:id="@+id/tle_img_step4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/icon_wizardstep_04_n" />

    <TextView
        android:id="@+id/tle_txt_step4"
        android:layout_width="344dp"
        android:layout_height="28dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="16dp"
        android:singleLine="true"
        android:gravity="center"
        android:text="@string/fragment_preview"
        android:textColor="#000000"
        android:textSize="21px"
        android:visibility="gone" />

</LinearLayout>