<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_scan_step2_description"
        android:layout_width="576dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="194dp"
        android:layout_marginTop="27dp"
        android:gravity="center"
        android:text="@string/scan_back_txt_description"
        android:textSize="20px" />

    <jp.co.ricoh.advop.idcardscanprint.ui.view.SettingShowView
        android:id="@+id/layout_step2_property"
        android:layout_width="245dp"
        android:layout_height="500dp"
        android:layout_marginLeft="779dp"
        android:layout_marginTop="5dp" />

    <RelativeLayout
        android:id="@+id/img_step2_description"
        android:layout_width="460dp"
        android:layout_height="334dp"
        android:layout_marginLeft="194dp"
        android:layout_marginTop="79dp"
        android:background="@drawable/id1_guide2"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/com_wizard_01_off_dim" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="35dp"
            android:gravity="start|center_vertical"
            android:singleLine="true"
            android:text="@string/tv_scan_step1"
            android:textColor="@color/text_color_909090"
            android:textSize="24px" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="175dp"
            android:background="@drawable/com_wizard_02_on" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="175dp"
            android:singleLine="true"
            android:gravity="start|center_vertical"
            android:text="@string/tv_scan_step2"
            android:textColor="@color/text_color_555555"
            android:textSize="24px" />
    </RelativeLayout>

</RelativeLayout>